Viewer Temlate, MenuNavigator 작성

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,12 +1,12 @@
-@import "utils";
+@import 'utils';
 
 body {
   margin: 0;
   background: $oc-gray-8;
-  // open-color에 등록된 색상을 불러오는 코드 $oc-[색상]-[명암]
   box-sizing: border-box;
 }
 
 * {
   box-sizing: inherit;
 }
+
