--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -1,2 +1,2 @@
-@import "~open-color/open-color";
-@import "~include-media/dist/include-media";
+@import '~open-color/open-color';
+@import '~include-media/dist/include-media';
